<resources>
    <string name="app_name">EjercicioImobiliaria</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="direccion">Direccion</string>
    <string name="numero">Numero</string>
    <string name="provincia">Provincia</string>
    <string name="ciudad">Ciudad</string>
    <string name="codigo_postal">Codigo Postal</string>
    <string-array name="sp_ciclos">
        <item>Valoracion:</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
</resources>